github_data_collector/src/data/issue_comment/Tencent_phxsql.txt
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/sql_yacc.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/sql_builtin.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/abstract_query_plan.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/datadict.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/debug_sync.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/derror.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/des_key_file.cc.o
[ 49%] Building CXX object sql/CMakeFiles/sql.dir/discover.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/field.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/field_conv.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/filesort.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/filesort_utils.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/gcalc_slicescan.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/gcalc_tools.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/gstream.cc.o
[ 50%] Building CXX object sql/CMakeFiles/sql.dir/handler.cc.o
/root/phxsql/phxsql/percona/sql/handler.cc: In function ‘int ha_commit_trans(THD*, bool, bool)’:
/root/phxsql/phxsql/percona/sql/handler.cc:1504:57: error: cannot convert ‘Ha_trx_info*’ to ‘const THD*’ for argument ‘1’ to ‘bool stmt_has_updated_trans_table(const THD*)’
     if (rw_trans && stmt_has_updated_trans_table(ha_info) &&
                                                         ^
make[3]: *** [sql/CMakeFiles/sql.dir/handler.cc.o] Error 1
make[3]: Leaving directory `/root/phxsql/phxsql/percona'
make[2]: *** [sql/CMakeFiles/sql.dir/all] Error 2
make[2]: Leaving directory `/root/phxsql/phxsql/percona'
make[1]: *** [all] Error 2
make[1]: Leaving directory `/root/phxsql/phxsql/percona'
make: *** [mysql] Error 2
想用phxsql,我们现在业务用的都是mysql5.7 ，直接换有点代价。
如题，执行后报如下错误：

[libprotobuf FATAL google/protobuf/generated_message_util.cc:812] CHECK failed: (scc->visit_status.load(std::memory_order_relaxed)) == (SCCInfoBase::kRunning): 
terminate called after throwing an instance of 'google::protobuf::FatalException'
  what():  CHECK failed: (scc->visit_status.load(std::memory_order_relaxed)) == (SCCInfoBase::kRunning): 
Aborted


文档上说：
PhxSQL是一个兼容MySQL、服务**高可用、数据强一致**的关系型数据库集群

如下图paxos 解决 cp 问题 **一致性和网络分区问题**。
![image](https://user-images.githubusercontent.com/5937331/59481198-e5e87980-8e95-11e9-9d9f-8de757ab3633.png)

请问 在网络分区上是如何处理的。

多谢

提个问题哈 client提交read-only请求的时候，如果提交的是尚未同步master数据的salve机器 是否出现了脏读？拓展开来，phxsql的的slave是否只能提供容灾，而不能分摊查询（读写强一致的场景），因为所有的读都要经过master。
在AddMerber、GetMemberList的时候一直报-202和-1，导致集群一直无法组建。也不知道是什么原因，观察发现 phxbinlogsvr_tools_phxrpc很短的时间就会断链，TCP状态为CLOSE_WAIT。
gdb core文件，发现在
void IOChannel::GetDBNameFromReqBuf(const char * buf, int buf_size) {
    if (buf_size > 5) {
        char cmd = buf[4];
        if (cmd == COM_INIT_DB) {
            int buf_len = 0;
            memcpy(&buf_len, buf, 3);
            db_name_ = std::string(buf + 5, buf_len - 1);
            LOG_DEBUG("bufsize %d buflen %d ret [%s]", buf_size, buf_len, db_name_.c_str());
        }
    }
}
构造db_name_值时候，堆栈如下：
(gdb) bt
#0  __memcpy_sse2_unaligned () at ../sysdeps/x86_64/multiarch/memcpy-sse2-unaligned.S:84
#1  0x0000000000415e12 in std::string::_S_construct<char const*> (
    __beg=0x7f6d77197ef5 "\003\335xxt\\0\036J_A_ORG_HIS_MAX_USED_LIMIT_PCTsq\\0~\\0\034\\0\\0\\0\003sq\\0~\\0\037", '\377' <repeats 11 times>, "\376\377\377\377\376\\0\\0\\0\001uq\\0~\\0\\\"\\0\\0\\0\002\004xxxt\\0\033J_FIRST_LOANCARD_OPEN_MONTHt\\0\a2015.09t\\0\021J_A_PMT_M3_CNT_18q\\0~\\0\030t\\0\020J_LBL_IS_ACCFUNDq\\0~\\0"..., __end=0x7f6d7775af50 "", __a=...)
    at /usr/include/c++/4.8/bits/basic_string.tcc:140
#2  0x00000000005bc3ed in std::basic_string<char, std::char_traits<char>, std::allocator<char> >::basic_string(char const*, unsigned long, std::allocator<char> const&) ()
#3  0x0000000000413ebe in phxsqlproxy::IOChannel::GetDBNameFromReqBuf (this=0x12ac0f0, 
    buf=0x7f6d77197ef0 "\\0\\0\002\003\335xxt\\0\036J_A_ORG_HIS_MAX_USED_LIMIT_PCTsq\\0~\\0\034\\0\\0\\0\003sq\\0~\\0\037", '\377' <repeats 11 times>, "\376\377\377\377\376\\0\\0\\0\001uq\\0~\\0\\\"\\0\\0\\0\002\004xxxt\\0\033J_FIRST_LOANCARD_OPEN_MONTHt\\0\a2015.09t\\0\021J_A_PMT_M3_CNT_18q\\0~\\0\030t\\0\020J_LBL_IS_ACCFUNDq"..., buf_size=16384) at io_channel.cpp:268
#4  0x000000000041392e in phxsqlproxy::IOChannel::TransMsgDirect (this=0x12ac0f0, source_fd=109, dest_fd=112, pf=0x7f6d7719bf70, nfds=2) at io_channel.cpp:178
#5  0x0000000000413495 in phxsqlproxy::IOChannel::TransMsg (this=0x12ac0f0, client_fd=109, sqlsvr_fd=112) at io_channel.cpp:107
#6  0x0000000000410b8d in phxsqlproxy::IORoutine::run (this=0x12ac060) at io_routine.cpp:161
#7  0x0000000000416efd in phxsqlproxy::RoutineRun (p=0x12ac060) at phxcoroutine.cpp:35
#8  0x0000000000438c13 in CoRoutineFunc (co=0x7f6de40d1530) at co_routine.cpp:440
#9  0x0000000000000000 in ?? ()
请问，在IOChannel::TransMsgDirect 函数中，定义char buf[1024*16],然后POLLIN中，
 if ((read_once = read(source_fd, buf, sizeof(buf))) <= 0) { 中，能否确保读到一个完整的mysql报文。这里的逻辑处理，是否导致了底层数据读取出错？或是mysql client端协议与mysql server5.6版本不同导致？
hello, I want to use phxsql in a python application, but I don't find a useful driver in flask or python
图一：由于溢出，SetHoldPaxosLogCount设进去的值为300.
![image](https://user-images.githubusercontent.com/22818981/45728898-af2e4d00-bbfc-11e8-8278-21c082be920c.png)
图二：溢出的函数
![image](https://user-images.githubusercontent.com/22818981/45728926-c9682b00-bbfc-11e8-8460-f93e139b7f63.png)
图三：相关函数
![image](https://user-images.githubusercontent.com/22818981/45729015-2f54b280-bbfd-11e8-8fa1-ba72d58a4873.png)


如图，由于GetOldestInstanceIDofFile这个函数返回值是int，会导致如果instanceid>int max时溢出，进而影响agentmonitor定时设SetHoldPaxosLogCount的值，这样会导致快照前保留的paxoslog只有300条，

结合这里：

> 关于PhxPaxos在LoadCheckpointState后会进行自杀
> 首先这里自杀的目的是为了方便程序以新的Checkpoint状态机数据来进行重启，那么会涉及到如何重启的问题。PhxPaxos只负责自杀，不负责重启，开发者需要自行解决重启的问题。我们微信内部一般会通过守护进程的方式来自动拉起工作进程。
> 
> 其次当你使用到PhxPaxos多个Group的特性的时候，那么当多个Group整体落后非常多的时候，每个Group都需要各自进行Checkpoint的对齐，那么每个Group都要经历一次自杀的操作，想象如果有100个Group，那么程序可能要经过100次重启才能完成Checkpoint的对齐，效率非常低下。这时候开发者需要根据自己的业务特性，在LoadCheckpointState的函数过程中进行一些延缓等待操作，使得一次自杀可以完成更多Group的Checkpoint对齐。


对于业务的表现就是：如果有一个点落后一点点（5分钟），那么就会进入传输Checkpoint模式，这是一个重操作，5分钟内完成不了，那么导致落后5分钟，又进入checkpoint模式，循环
系统是centos 6.9,在进行make的时候报错了,具体错误如下
[ 87%] Building CXX object sql/CMakeFiles/slave.dir/rpl_info_dummy.cc.o
Linking CXX static library libslave.a
make[3]: Leaving directory `/data/phxsql/percona'
[ 87%] Built target slave
make[3]: Entering directory `/data/phxsql/percona'
Scanning dependencies of target pfs_connect_attr-t
make[3]: Leaving directory `/data/phxsql/percona'
make[3]: Entering directory `/data/phxsql/percona'
[ 87%] Building CXX object storage/perfschema/unittest/CMakeFiles/pfs_connect_attr-t.dir/pfs_connect_attr-t.cc.o
[ 87%] Building CXX object storage/perfschema/unittest/CMakeFiles/pfs_connect_attr-t.dir/__/__/__/sql/sql_builtin.cc.o
[ 87%] Building C object storage/perfschema/unittest/CMakeFiles/pfs_connect_attr-t.dir/__/__/__/mysys/string.c.o
Linking CXX executable pfs_connect_attr-t
../../../plugin/phxsync_phxrpc/libphxsync_master_phxrpc.a(phxsync_utils.cc.o): In function `repl_phx_report_binlog_to_binlogsvr(Binlog_storage_param*, char const*, char const*, unsigned long long, char const*, unsigned long long)':
phxsync_utils.cc:(.text+0x4ad): undefined reference to `phxbinlog::GtidHandler::ParseEventList(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::vector<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >*, bool, std::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::vector<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::basic_string<char, std::char_traits<char>, std::allocator<char> > > >*)'
phxsync_utils.cc:(.text+0x636): undefined reference to `phxbinlogsvr::PhxBinlogClient::SendBinLog(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&)'
../../../plugin/phxsync_phxrpc/libphxsync_master_phxrpc.a(init_with_phxbinlogsvr.cc.o): In function `BinlogGtidState::get_last_gtid_in_binlogsvr(char const*, std::basic_string<char, std::char_traits<char>, std::allocator<char> >&)':
init_with_phxbinlogsvr.cc:(.text+0x551): undefined reference to `phxbinlogsvr::PhxBinlogClient::GetLastSendGtid(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> >*)'
init_with_phxbinlogsvr.cc:(.text+0x67c): undefined reference to `phxbinlogsvr::PhxBinlogClient::GetLastSendGtid(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> >*)'
collect2: ld returned 1 exit status
make[3]: *** [storage/perfschema/unittest/pfs_connect_attr-t] Error 1
make[3]: Leaving directory `/data/phxsql/percona'
make[2]: *** [storage/perfschema/unittest/CMakeFiles/pfs_connect_attr-t.dir/all] Error 2
make[2]: Leaving directory `/data/phxsql/percona'
make[1]: *** [all] Error 2
make[1]: Leaving directory `/data/phxsql/percona'
make: *** [mysql] Error 2
